<resources>
    <string name="app_name">RepairOrder</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="labor">Labor</string>
    <string name="parts">Parts</string>
    <string name="paint">Paint</string>
    <string name="inspection">Inspection</string>
    <string name="technician">Technician</string>
    <string name="repair_order">Repair Order</string>
    <string name="textview">TextView</string>
    <string name="order_type">Order Type</string>
    <string name="subtotal">Subtotal</string>
    <string name="_0_0">$0.0</string>
    <string name="_0_0_">$0.0</string>
    <string name="_0_0__">$0.0</string>
    <string name="submit">Submit</string>
</resources>